# reasonprune

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
data/: knowledge.calib.jsonl  knowledge.eval.jsonl  neutral.txt  reasoning.calib.jsonl  reasoning.eval.jsonl
data/bench/: gsm8k.jsonl  gsm8k_train_calib.jsonl  trivia.jsonl
data/facts/: author.tsv  capital.tsv  currency.tsv  element.tsv  state_capital.tsv
docs/: index.html  report.html  report_built.html  report_data.json
reasonprune/: __init__.py  capture.py  config.py  datagen.py  evalharness.py  jlens.py  moe.py  prune.py  score.py  slicer.py  worker.py
results/qwen-0.8b/: baseline.json  baseline_bench.json  baseline_full.json  jspace.npz  scores.npz  sweep.jsonl  sweep_bench.jsonl  sweep_bench_v2.jsonl  sweep_full.jsonl
results/qwen-27b/: baseline_bench.json
scripts/: chart.py  experiment.py  fetch_bench.py  slice_model.py
